#
# some news ... see also TODO for hints
#


2021-07-10 -> ## repo stuff
              documentation updates
	      correct log parts from runit service descriptions

	      ## sensor_pi && libhelper stuff
	      add first parts to add the cpu temp

              ## database stuff
	      add additional values to database

2021-07-03 -> ## repo stuff
              documentation updates

2021-06-28 -> ## code stuff
              remove warnings

2021-06-27 -> ## poweroff_handler stuff
              some smaller add for debugging

              ## libhelper stuff
              add function to set edge falling for a gpio pin

              ## target stuff
	      activate poweroff_d via runit

2021-06-26 -> ## poweroff_handler stuff
              some smaller add for debugging

2021-06-23 -> ## poweroff_handler stuff
              some smaller fixes

2021-06-22 -> ## poweroff_handler and libhelper stuff
              add more gpio code parts
	      add first inotify code parts

2021-06-21 -> ## readout_db stuff
              add rest code to readout the database

2021-06-18 -> ## code stuff
              remove wrong NEWLINE to all perror calls in all files

	      ## libhelper stuff
	      add functions to handle GPIO via sysfs

	      ## poweroff_handler stuff
	      add first content to handle the poweroff button

              ## repo stuff
              update raspi4 kernel to 5.10.44

2021-06-17 -> ## repo stuff
              add motd files for different combinations

2021-06-16 -> ## repo stuff
              add kernel howto for raspi3/4 (64Bit)
	      add default kernel configs for raspi3/4

2021-06-14 -> ## repo stuff
              add some more documentation stuff

              ## target stuff
	      add BMP180 HW module and activate it
	      add bmp280, bmp280_i2c kernel modules to modprobe.d (i2c.conf)

2021-06-13 -> ## repo stuff
              a lot of documentation adds
	      add gnumeric sheet of measured temp values
